[gd_scene load_steps=11 format=3 uid="uid://nkldx7kfmt00"]

[ext_resource type="Script" path="res://world/pickups/PickUp.gd" id="1_nk6dq"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="2_2hyl5"]
[ext_resource type="Resource" uid="uid://b4yxddcx2kf4m" path="res://world/game_stats.tres" id="2_pesv3"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="3_02vwf"]
[ext_resource type="Script" path="res://components/move_component.gd" id="4_ormpu"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="6_1lr1w"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="7_0l5ac"]
[ext_resource type="AudioStream" uid="uid://cw7degrkebghg" path="res://asserts/sounds/powerUp.wav" id="7_lw7ms"]

[sub_resource type="Animation" id="Animation_r58by"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ihnqa"]
_data = {
"default": SubResource("Animation_r58by")
}

[node name="PickUp" type="Node2D"]
script = ExtResource("1_nk6dq")
game_stats = ExtResource("2_pesv3")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ihnqa")
}
autoplay = "default"

[node name="FlashComponent" type="Node" parent="."]
script = ExtResource("2_2hyl5")
sprite = Object(Sprite2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"texture":null,"centered":true,"offset":Vector2(0, 0),"flip_h":false,"flip_v":false,"hframes":1,"vframes":1,"frame":0,"region_enabled":false,"region_rect":Rect2(0, 0, 0, 0),"region_filter_clip_enabled":false,"script":null)


[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_02vwf")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_ormpu")
actor = NodePath("..")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("6_1lr1w")
damage = 0.0

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lw7ms")
script = ExtResource("7_0l5ac")
